--- a/public/index.html
+++ b/public/index.html
@@ -26,7 +26,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Kdam+Thmor+Pro&display=swap" rel="stylesheet">
 
-    <title>Coffe Made Better - Aejhay's Cafe</title>
+    <title>Coffee Made Better - Aejhay's Cafe</title>
   </head>
   <body>
     <div id="root"></div>
